All pages added

--- a/journey.html
+++ b/journey.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="journey.css">
 </head>
 <body>
     <header>
@@ -13,9 +13,8 @@
             <button onclick="redirectToPage('journey.html')">Journey</button>
         </div>
     </header>
-    <h1>HOME</h1>
-    <p>Hello! This is the website I am making after finishing the JS course.<br>This page includes an "About Me" pages and a "Journey" pages.
-    <br>Click the buttons below to look at both pages.
+    <h1>JOURNEY</h1>
+    <p>Hello! This is the website I am making after finishing the JS course.<br>
     </p>
 
     <script src="main.js"></script>
