Final version (i think)

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -10,7 +10,7 @@
         <div class="header-buttons">
             <button onclick="redirectToPage('main.html')">Home</button>
             <button onclick="redirectToPage('aboutMe.html')">About Me</button>
-            <button onclick="redirectToPage('journey.html')">Journey</button>
+            <button onclick="redirectToPage('journey.html')">My Journey</button>
         </div>
     </header>
     <div class="intro-body">
