--- a/main.html
+++ b/main.html
@@ -10,13 +10,19 @@
         <div class="header-buttons">
             <button onclick="redirectToPage('main.html')">Home</button>
             <button onclick="redirectToPage('aboutMe.html')">About Me</button>
-            <button onclick="redirectToPage('journey.html')">Journey</button>
+            <button onclick="redirectToPage('journey.html')">My Journey</button>
         </div>
     </header>
-    <h1>HOME</h1>
-    <p>Hello! This is the website I am making after finishing the JS course.<br>This page includes an "About Me" pages and a "Journey" pages.
-    <br>Click the buttons below to look at both pages.
-    </p>
+    <div class="intro-body">'
+        <h1>HOME</h1>
+        <p>Hello! This is the website I am making after finishing the JS course.<br>This page includes an "About Me" pages and a "Journey" pages.
+            <br>Click the buttons below to look at both pages.
+        </p>
+    </div>
+    <div class="page-buttons">
+        <button onclick="redirectToPage('aboutMe.html')">About Me</button>
+        <button onclick="redirectToPage('journey.html')">My Journey</button>
+    </div>
 
     <script src="main.js"></script>
 </body>
