--- a/journey.html
+++ b/journey.html
@@ -10,12 +10,46 @@
         <div class="header-buttons">
             <button onclick="redirectToPage('main.html')">Home</button>
             <button onclick="redirectToPage('aboutMe.html')">About Me</button>
-            <button onclick="redirectToPage('journey.html')">Journey</button>
+            <button onclick="redirectToPage('journey.html')">My Journey</button>
         </div>
     </header>
-    <h1>JOURNEY</h1>
-    <p>Hello! This is the website I am making after finishing the JS course.<br>
-    </p>
+    <div class="intro-body">
+        <h1>JOURNEY</h1>
+        <p>Hello! This is the website I am making after finishing the JS course.<br>
+        </p>
+    </div>
+    <div class="main-body1">
+        <h3>Start</h3>
+        <p>To be able to properly learn JavaScript, I needed to know the syntax (vocabulary) of the language.<br>
+            The course I watched covered this part.
+        </p>
+        <img src="JavaScript-logo.png" width="100px" class="center">
+    </div>
+    <div class="main-body2">
+        <h3>Visuals</h3>
+        <p>JavaScript is mainly used in websites and the bricks and paint for a website is HTML and CSS.<br>
+            They make the visuals (buttons, text, lists, etc.) you see on a webpage.
+        </p>
+        <img src="html_css.png" width="200px" class="center">
+    </div>
+    <div class="main-body3">
+        <h3>Planning</h3>
+        <p>After acquiring the tools to build a website, we can start making one.<br>
+            But first, we need to make some planning.<br>
+            For planning, DOM (Document Object Model) is used.<br>
+            The website planning is made visually with simpler methods using shapes and boxes.
+        </p>
+        <img src="dom.png" width="250px" class="center">
+    </div>
+    <div class="main-body4">
+        <h3>Summary</h3>
+        <p>Learning and using HTML, CSS, and JavaScript is easy.<br>
+            Before starting to build a website, proper planning is needed.<br>
+            DOM can be used to make that planning.
+        </p>
+        <img src="htmlCssJs.jpg" width="300px" class="center">
+    </div>
+
 
     <script src="main.js"></script>
 </body>
