- interactive buttons added - much better look - ready for submission

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -15,10 +15,11 @@
     </header>
     <div class="intro-body">
         <h1>ABOUT ME</h1>
-        <h4>Welcome! This page is about me.</h4>        
+        <p>Welcome! This page is about me.</p>     
+        <button id="aboutMeButton">Click the Button to Get to Know Me!</button>   
     </div>
     <div class="main-body">
-        <p>My name is Sedat Yilmaz<br>I study in Salahaldin International School (SIS) in Cairo, Egypt.<br>I am a student in the IB Diploma Programme.
+        <p id="displayedText" style="display: none;">My name is Sedat Yilmaz<br>I study in Salahaldin International School (SIS) in Cairo, Egypt.<br>I am a student in the IB Diploma Programme.
         <br>As of right now, I know 4 programming languages; Python, JavaScript, HTML, CSS.
         </p>
     </div>
