--- a/journey.html
+++ b/journey.html
@@ -19,38 +19,38 @@
         </p>
     </div>
     <div class="main-body1">
-        <h3>Start</h3>
-        <p>To be able to properly learn JavaScript, I needed to know the syntax (vocabulary) of the language.<br>
+        <button id="startButton">Start</button>
+        <p id="startTxt" style="display: none;">To be able to properly learn JavaScript, I needed to know the syntax (vocabulary) of the language.<br>
             The course I watched covered this part.
         </p>
-        <img src="JavaScript-logo.png" width="100px" class="center">
+        <img id="startImg" style="display: none;" src="JavaScript-logo.png" width="100px" class="center">
     </div>
     <div class="main-body2">
-        <h3>Visuals</h3>
-        <p>JavaScript is mainly used in websites and the bricks and paint for a website is HTML and CSS.<br>
+        <button id="visualsButton">Visuals</button>
+        <p id="visualsTxt" style="display: none;">JavaScript is mainly used in websites and the bricks and paint for a website is HTML and CSS.<br>
             They make the visuals (buttons, text, lists, etc.) you see on a webpage.
         </p>
-        <img src="html_css.png" width="200px" class="center">
+        <img id="visualsImg" style="display: none;" src="html_css.png" width="200px" class="center">
     </div>
     <div class="main-body3">
-        <h3>Planning</h3>
-        <p>After acquiring the tools to build a website, we can start making one.<br>
+        <button id="planningButton" >Planning</button>
+        <p id="planningTxt" style="display: none;">After acquiring the tools to build a website, we can start making one.<br>
             But first, we need to make some planning.<br>
             For planning, DOM (Document Object Model) is used.<br>
             The website planning is made visually with simpler methods using shapes and boxes.
         </p>
-        <img src="dom.png" width="250px" class="center">
+        <img id="planningImg" style="display: none;" src="dom.png" width="250px" class="center">
     </div>
     <div class="main-body4">
-        <h3>Summary</h3>
-        <p>Learning and using HTML, CSS, and JavaScript is easy.<br>
+        <button id="summaryButton">Summary</button>
+        <p id="summaryTxt" style="display: none;">Learning and using HTML, CSS, and JavaScript is easy.<br>
             Before starting to build a website, proper planning is needed.<br>
             DOM can be used to make that planning.
         </p>
-        <img src="htmlCssJs.jpg" width="300px" class="center">
+        <img id="summaryImg" style="display: none;" src="htmlCssJs.jpg" width="300px" class="center">
     </div>
 
 
-    <script src="main.js"></script>
+    <script src="journey.js"></script>
 </body>
 </html>
